Add Touch Wake version 1.

--- a/drivers/misc/Makefile
+++ b/drivers/misc/Makefile
@@ -62,3 +62,4 @@ obj-$(CONFIG_BLX)		+= blx.o
 obj-$(CONFIG_COLOR_CONTROL)	+= color_control.o
 obj-$(CONFIG_SOUND_CONTROL)	+= sound_control.o
 obj-$(CONFIG_OMAP_TEMP_CONTROL)	+= temp_control.o
+obj-$(CONFIG_TOUCH_WAKE)	+= touch_wake.o
