--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -607,4 +607,10 @@ config OMAP_TEMP_CONTROL
 	help
 	  Enable support for Temp Control
 
+config TOUCH_WAKE
+	bool "Support for Touch Wake"
+	default y
+	help
+	  Say Y here to enable Touch Wake
+
 endif # MISC_DEVICES
