SAMOLED Color hack from https://github.com/drod2169/KangBang-OMAP/commit/aaf6676020da81d50135615541339c7a45a430ab

--- a/arch/arm/configs/tuna_defconfig
+++ b/arch/arm/configs/tuna_defconfig
@@ -1776,6 +1776,7 @@ CONFIG_BACKLIGHT_GENERIC=y
 # CONFIG_BACKLIGHT_PWM is not set
 # CONFIG_BACKLIGHT_ADP8860 is not set
 # CONFIG_BACKLIGHT_ADP8870 is not set
+CONFIG_COLOR_GAMMA_HACK=y
 
 #
 # Display device support
