make overclocking a config option

--- a/arch/arm/configs/popcorn_defconfig
+++ b/arch/arm/configs/popcorn_defconfig
@@ -321,6 +321,7 @@ CONFIG_MACH_TUNA=y
 CONFIG_OMAP_TPS6236X=y
 CONFIG_OMAP_ALLOW_OSWR=y
 CONFIG_OMAP_FIQ_DEBUGGER=y
+# CONFIG_CPUGPU_OVERCLOCK is not set
 
 #
 # System MMU
