--- a/arch/arm/configs/popcorn_defconfig
+++ b/arch/arm/configs/popcorn_defconfig
@@ -36,7 +36,7 @@ CONFIG_HAVE_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-PopcornKernel-v7.2"
+CONFIG_LOCALVERSION="-PopcornKernel-v7.2.1"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -67,6 +67,7 @@ CONFIG_GENERIC_IRQ_CHIP=y
 #
 # RCU Subsystem
 #
+# CONFIG_TREE_RCU is not set
 # CONFIG_TREE_PREEMPT_RCU is not set
 CONFIG_JRCU=y
 # CONFIG_PREEMPT_RCU is not set
@@ -311,6 +312,7 @@ CONFIG_ARCH_OMAP2PLUS_TYPICAL=y
 CONFIG_ARCH_OMAP4=y
 CONFIG_OMAP_PACKAGE_CBL=y
 CONFIG_OMAP_PACKAGE_CBS=y
+CONFIG_OMAP_IPU_DEEPIDLE=y
 
 #
 # OMAP Board Type
@@ -492,7 +494,7 @@ CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_SMARTASS2=y
 CONFIG_CPU_FREQ_GOV_GALLIMAUFRY=y
 CONFIG_CPU_FREQ_GOV_AGGRESSIVE=y
-CONFIG_CPU_FREQ_GOV_LAGFREE=y
+# CONFIG_CPU_FREQ_GOV_LAGFREE is not set
 CONFIG_CPU_FREQ_MIN_TICKS=12
 CONFIG_CPU_FREQ_SAMPLING_LATENCY_MULTIPLIER=1000
 # CONFIG_CPU_FREQ_GOV_HOTPLUG is not set
